RESOLVED FIXED222830
Fix potential thread safety issue in WebsiteDataStore::fetchDataAndApply()
https://bugs.webkit.org/show_bug.cgi?id=222830
Summary Fix potential thread safety issue in WebsiteDataStore::fetchDataAndApply()
Chris Dumez
Reported 2021-03-05 14:33:55 PST
Fix potential thread safety issue in WebsiteDataStore::fetchDataAndApply().
Attachments
Patch (4.25 KB, patch)
2021-03-05 14:38 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-03-05 14:38:31 PST
Geoffrey Garen
Comment 2 2021-03-05 14:45:32 PST
Comment on attachment 422423 [details] Patch r=me
EWS
Comment 3 2021-03-05 16:08:14 PST
Committed r274017: <https://commits.webkit.org/r274017> All reviewed patches have been landed. Closing bug and clearing flags on attachment 422423 [details].
Radar WebKit Bug Importer
Comment 4 2021-03-05 16:09:41 PST
Note You need to log in before you can comment on or make changes to this bug.